Add c++11 flag to fix compiler error OCD change to remove undefined behavior

--- a/fast_str/Makefile
+++ b/fast_str/Makefile
@@ -29,7 +29,7 @@ str_benchmark: strspn.o strcasecmp.o benchmark.o
 	gcc $(CFLAGS) -c $< -o $@
 
 benchmark.o : benchmark.cc
-	g++ -c $< -o $@
+	g++ -std=c++11 -c $< -o $@
 
 clean : FORCE
 	rm -f *.o* *~ str_benchmark
