Study FPU save/restore performance; small optimizations

--- a/kmemcpy/Makefile
+++ b/kmemcpy/Makefile
@@ -1,5 +1,16 @@
-# obj-m = softirq_test.o kmemcpy.o
-#dpi-objs = softirq_test.o
+# Copyright (C) 2018 Alexander Krizhanovsky (ak@tempesta-tech.com).
+#
+# This file is free software; you can redistribute it and/or modify
+# it under the terms of the GNU Lesser General Public License as published
+# by the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU Lesser General Public License for more details.
+# See http://www.gnu.org/licenses/lgpl.html .
+
 obj-m = kmemcpy.o
 
 EXTRA_CFLAGS += -mmmx -msse4.2 -mpreferred-stack-boundary=4 -I$(PWD)
