--- a/kstrings/Makefile
+++ b/kstrings/Makefile
@@ -11,14 +11,17 @@
 # GNU Lesser General Public License for more details.
 # See http://www.gnu.org/licenses/lgpl.html .
 
-obj-m = kmemcpy.o
+obj-m = memcpy.o
+obj-m = memcmp.o
 
 EXTRA_CFLAGS += -mmmx -msse4.2 -mpreferred-stack-boundary=4 -I$(PWD)
 
 KVERSION = $(shell uname -r)
 all:
 	$(MAKE) -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
-	$(CC) -O3 -march=native -mtune=native -o memcpy_benchmark kmemcpy.c
+	$(CC) -O3 -march=native -mtune=native -o memcpy_benchmark memcpy.c
+	$(CC) -O3 -march=native -mtune=native -o memcmp_benchmark memcmp.c
 
 clean:
 	$(MAKE) -C /lib/modules/$(KVERSION)/build M=$(PWD) clean
+	rm -f memcpy_benchmark memcmp_benchmark *.o* *~
