--- a/http_benchmark/Makefile
+++ b/http_benchmark/Makefile
@@ -1,4 +1,4 @@
-CFLAGS	= -std=c99 -march=core-avx-i -mtune=core-avx-i -O2
+CFLAGS	= -std=c99 -march=native -mtune=native -O2
 
 http_benchmark: http_hsm.o http_ngx.o http_tbl.o http_goto.o http_benchmark.o
 	$(CC) -o $@ $^
