Make the tests even closer to each other

--- a/http_benchmark/Makefile
+++ b/http_benchmark/Makefile
@@ -1,4 +1,4 @@
-CFLAGS	= -std=c99 -march=native -mtune=native -O2
+CFLAGS	= -std=c99 -march=native -mtune=native -O3 -ftree-vectorizer-verbose=2 -fopt-info-vec-all
 
 http_benchmark: http_hsm.o http_ngx.o http_tbl.o http_goto.o http_benchmark.o
 	$(CC) -o $@ $^
