--- a/fast_str/Makefile
+++ b/fast_str/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2016 Alexander Krizhanovsky (ak@natsys-lab.com).
+# Copyright (C) 2016 Alexander Krizhanovsky (ak@tempesta-tech.com).
 # Copyright (C) 2018 Alexander Krizhanovsky (ak@tempesta-tech.com).
 #
 # This program is free software; you can redistribute it and/or modify it
