1. Fix computation of memory blocks withing the 1st extent 2. Initialize the first extent in the database and fix its initialization 3. Replace some nasty macros with functions 4. Improve debug tracing and document the database layout.

--- a/htrie/Makefile
+++ b/htrie/Makefile
@@ -19,9 +19,10 @@
 CFLAGS	= -march=native -mtune=native -ltbbmalloc_proxy \
 	  -Wno-address-of-packed-member
 ifdef DEBUG
-	CFLAGS += -O0 -ggdb3 -DDEBUG=1
+	CFLAGS += -O0 -ggdb3
+	CFLAGS += -DDEBUG=3 # Tempesta DB debugging is printed on the level >=2
 else
-	CFLAGS += -O3
+	CFLAGS += -O3 -DNDEBUG
 endif
 ifdef BIG
 	CFLAGS += -DBIG_MACHINE=1
