Facilitate the test debugability:
* use build option THREADS instead of the bunch of macros

* replace exceptions throwing for htrie operations with assertions
  this crashes the program with the HTrie dump, which can be analyzed

* trie.gdb introduces handy GDB custom commands to debug HTrie

--- a/htrie/Makefile
+++ b/htrie/Makefile
@@ -29,9 +29,10 @@ else
 	# Tempesta DB debugging is printed on the level >=2
 	CFLAGS += -DDEBUG=3 -O0 -ggdb3
 endif
-ifdef BIG
-	CFLAGS += -DBIG_MACHINE=1
-endif
+
+THREADS ?= 1
+CFLAGS += -DTEST_THREADS_N=$(THREADS)
+
 CXXFLAGS = $(CFLAGS) -std=c++20 -Wno-register
 
 all: lfds_bench test
