Refactoring: remove TDB_ALLOC_F_FREE_EXT, which can be just replaced with getting the record type (new boolean large_alloc).
This refactoring revealed a bug: once we reach a new extent boundary
we just get LFS stack form a new extent without initializing it.
The fix introduces a new flag TDB_ALLOC_F_NEED_EXT handled by
tdb_alloc_check_blk_ptr().

--- a/htrie/Makefile
+++ b/htrie/Makefile
@@ -23,7 +23,7 @@ DEBUG ?= 0
 ifeq ($(DEBUG), 0)
 	CFLAGS += -O3 -DNDEBUG
 else ifeq ($(DEBUG), 1)
-	# Debug options useful for multi-thread tests debugging
+	# This option is useful for multi-thread tests debugging.
 	CFLAGS += -O0 -ggdb3
 else
 	# Tempesta DB debugging is printed on the level >=2
